完成了模板推送

--- a/keymanage/src/main/resources/templates/Cabinet/cabinet.html
+++ b/keymanage/src/main/resources/templates/Cabinet/cabinet.html
@@ -205,7 +205,7 @@
                         }}
                     }
                 },
-                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, },
+                { name: 'id', index: 'id', width: 60, sortable: true, editable: true,hidden:true },
                 {
                     name: 'mac', index: 'mac', width: 60, sortable: true, editable: true, editrules: {
                     required: true,
@@ -218,7 +218,7 @@
                     edithidden: true,
                     key: true
                 }},
-                { name: 'name', index: 'name', width: 60, sortable: true, editable: true },
+                { name: 'cabinetName', index: 'cabinetName', width: 60, sortable: true, editable: true },
                 { name: 'location', index: 'location', width: 60, sortable: true, editable: true },
                 { name: 'numofdoor', index: 'numofdoor', width: 60, sortable: true, editable:true ,search:false,editrules: {
                     required:true,
