--- a/keymanage/src/main/resources/templates/Home/login.html
+++ b/keymanage/src/main/resources/templates/Home/login.html
@@ -43,7 +43,7 @@
 					<div class="login-container">
 						<div class="center">
 							<h1>
-								<span class="white">钥匙管理平台</span>
+								<span class="white">物品管理平台</span>
 
 							</h1>
 							<h4 class="blue" id="id-company-text">&copy; 南京理工大学</h4>
@@ -67,7 +67,7 @@
 											<fieldset>
 												<label class="block clearfix">
                                                     <span class="block input-icon input-icon-right">
-                                                        <input type="text" class="form-control" id="username" placeholder="用户名" />
+                                                        <input type="text" class="form-control" id="username" placeholder="用户名" autocomplete="off"/>
                                                         <i class="ace-icon fa fa-user"></i>
                                                     </span>
 												</label>
