--- a/keymanage/src/main/resources/templates/RFID/rfid.html
+++ b/keymanage/src/main/resources/templates/RFID/rfid.html
@@ -205,11 +205,11 @@
                         }}
                     }
                 },
-                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, key: true},
+                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, key: true,hidden:true},
                 {
                     name: 'mac', index: 'mac', width: 60, sortable: true, editable: false,
                 },
-                { name: 'location', index: 'location', width: 60, sortable: true, editable: false },
+                { name: 'cellNo', index: 'cellNo', width: 60, sortable: true, editable: false },
                 { name: 'rfid', index: 'rfid', width: 60, sortable: true, editable: true },
             ],
 
