--- a/keymanage/src/main/resources/templates/UserManage/user.html
+++ b/keymanage/src/main/resources/templates/UserManage/user.html
@@ -205,9 +205,9 @@
                         }}
                     }
                 },
-                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, key: true},
+                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, key: true,hidden:true},
                 {
-                    name: 'name', index: 'name', width: 60, sortable: true, editable: true, editrules: {
+                    name: 'userName', index: 'userName', width: 60, sortable: true, editable: true, editrules: {
                     required: true,
                     edithidden: true,
 
